Fix for Java11
Signed-off-by: Tomoyuki Morita <moritato@amazon.com>